New colors and better responsive

--- a/index.html
+++ b/index.html
@@ -68,6 +68,27 @@
 
                         <input type="radio" name="color" value="orange" id="c-orange">
                         <label for="c-orange" class="color-swatch orange"></label>
+
+                        <input type="radio" name="color" value="pink" id="c-pink">
+                        <label for="c-pink" class="color-swatch pink"></label>
+
+                        <input type="radio" name="color" value="yellow" id="c-yellow">
+                        <label for="c-yellow" class="color-swatch yellow"></label>
+
+                        <input type="radio" name="color" value="cyan" id="c-cyan">
+                        <label for="c-cyan" class="color-swatch cyan"></label>
+
+                        <input type="radio" name="color" value="indigo" id="c-indigo">
+                        <label for="c-indigo" class="color-swatch indigo"></label>
+
+                        <input type="radio" name="color" value="teal" id="c-teal">
+                        <label for="c-teal" class="color-swatch teal"></label>
+
+                        <input type="radio" name="color" value="lime" id="c-lime">
+                        <label for="c-lime" class="color-swatch lime"></label>
+
+                        <input type="radio" name="color" value="rose" id="c-rose">
+                        <label for="c-rose" class="color-swatch rose"></label>
                     </div>
                 </div>
                 <button type="submit" class="btn-submit">Ajouter</button>
